<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/txtA4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtA4"
    />

    <EditText
        android:id="@+id/editTextA4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="0sp"
        android:layout_toRightOf="@id/txtA4"
        android:layout_alignBaseline="@+id/txtA4"
        android:textSize="@dimen/textViewSize"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="440.0"
        android:maxLength="6"
    />

    <TextView
        android:id="@+id/txtHZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginRight="0sp"
        android:layout_toRightOf="@id/editTextA4"
        android:layout_alignBaseline="@+id/txtA4"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtHz"
    />

    <TextView
        android:id="@+id/txtMeasureIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_below="@+id/txtA4"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtMeasureIndicator"
    />

    <Spinner
        android:id="@+id/spnNoteQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_below="@+id/txtSignature"
        android:layout_toRightOf="@id/txtMeasureIndicator"
        android:layout_alignBaseline="@+id/txtMeasureIndicator"
        android:textSize="@dimen/textViewSize"
        android:entries="@array/measureQuantity"
    >
    </Spinner>

    <TextView
        android:id="@+id/txtSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSignature"
        android:layout_toRightOf="@id/spnNoteQuantity"
        android:layout_alignBaseline="@+id/txtMeasureIndicator"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtSlash"
    />

    <Spinner
        android:id="@+id/spnNoteType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_below="@+id/txtSignature"
        android:layout_toRightOf="@id/txtSlash"
        android:layout_alignBaseline="@+id/txtMeasureIndicator"
        android:textSize="@dimen/textViewSize"
        android:entries="@array/measureType"
    >
    </Spinner>

    <TextView
        android:id="@+id/txtCLef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_below="@+id/txtMeasureIndicator"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtClef"
    />

    <Spinner
        android:id="@+id/spnKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginRight="0sp"
        android:layout_below="@+id/txtMeasureIndicator"
        android:layout_toRightOf="@id/txtCLef"
        android:layout_alignBaseline="@+id/txtCLef"
        android:textSize="@dimen/textViewSize"
        android:entries="@array/key"
    >
    </Spinner>

    <TextView
        android:id="@+id/txtIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="0sp"
        android:layout_below="@+id/txtMeasureIndicator"
        android:layout_toRightOf="@id/spnKey"
        android:layout_alignBaseline="@+id/txtCLef"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtIn"
    />

    <Spinner
        android:id="@+id/spnKeyLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_below="@+id/txtMeasureIndicator"
        android:layout_toRightOf="@id/txtIn"
        android:layout_alignBaseline="@+id/txtCLef"
        android:textSize="@dimen/textViewSize"
        android:entries="@array/keyLine"
    >
    </Spinner>

    <TextView
        android:id="@+id/txtTranspose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="0sp"
        android:layout_below="@+id/txtMeasureIndicator"
        android:layout_toRightOf="@id/spnKeyLine"
        android:layout_alignBaseline="@+id/txtCLef"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtTranspose"
    />

    <Spinner
        android:id="@+id/spnTranspose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_below="@+id/txtMeasureIndicator"
        android:layout_toRightOf="@id/txtTranspose"
        android:layout_alignBaseline="@+id/txtCLef"
        android:textSize="@dimen/textViewSize"
        android:entries="@array/octave"
    >
    </Spinner>

    <TextView
        android:id="@+id/txtSignature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_below="@+id/txtCLef"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtSignature"
    />

    <Spinner
        android:id="@+id/spnSignature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_below="@+id/txtA4"
        android:layout_toRightOf="@id/txtSignature"
        android:layout_alignBaseline="@+id/txtSignature"
        android:textSize="@dimen/textViewSize"
        android:entries="@array/signature"

    >
    </Spinner>

    <TextView
        android:id="@+id/txtTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_below="@+id/txtSignature"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtTempo"
    />

    <Spinner
        android:id="@+id/spnTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="0sp"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_toRightOf="@id/txtTempo"
        android:layout_below="@+id/txtSignature"
        android:textSize="@dimen/textViewSize"
        android:entries="@array/tempo"
    >
    </Spinner>

    <TextView
        android:id="@+id/txtIqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginRight="0sp"
        android:layout_toRightOf="@id/spnTempo"
        android:layout_alignBaseline="@+id/txtTempo"
        android:textSize="@dimen/textViewSize"
        android:text="@string/txtIqual"
    />

    <EditText
        android:id="@+id/editTextTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="0sp"
        android:layout_toRightOf="@id/txtIqual"
        android:layout_alignBaseline="@+id/txtTempo"
        android:textSize="@dimen/textViewSize"
        android:ems="2"
        android:inputType="number"
        android:text="60"
        android:maxLength="3"
    />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_below="@+id/txtTempo"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textViewSize"
        android:text="@string/btnStart"
    />

</RelativeLayout>